--- a/www/test.html
+++ b/www/test.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+    canvas{
+        position: relative;
+    }
+    </style>
 </head>
 <body>
-    
 
     <script src="test.js"></script>
 </body>
